
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;
struct idt_register {int length; int base; } ;
struct idt_gate {int dummy; } ;
typedef int buffer ;


 int assert (int) ;
 int get_idt (struct idt_register*) ;
 int idt_gate_addr (struct idt_gate*) ;
 int read_range (int ,int,char*) ;

__attribute__((used)) static uint64_t read_idt_gate(int i) {
 char buffer[4096];
 struct idt_register idtr;

 get_idt(&idtr);
 assert(idtr.length <= sizeof(buffer));
 assert(i <= idtr.length / sizeof(struct idt_gate));
 read_range(idtr.base, idtr.length, &buffer[0]);

 struct idt_gate *gate = (struct idt_gate *)&buffer[0] + i;
 uint64_t addr = idt_gate_addr(gate);
 return addr;
}
